# w4b_v3

./: .gitignore  README.md  data_retention_scheme.md
.github/: copilot-instructions.md
artefacts/: keycloak_realm_generation.yaml  raspi_image_generator.sh  server_podman_compose.txt  wgmonitor.py  wireguard_server_setup.md
edge/: raspi_image_generator.sh
edge/raspiImageGenerator/: .gitignore  Dockerfile  README.md  check_services.sh  imageGenerator_tasks_adrs.md  image_generator.py  image_generator_cli.py  pyproject.toml  requirements.txt  run_debug.sh  run_generator.py  run_image_generator.sh  run_with_deps.sh  sample_config.yaml
edge/raspiImageGenerator/configs/: hive_0Bpfj4cT_pi3.yaml
edge/raspiImageGenerator/core/: __init__.py  cache_manager.py  config.py  image.py  image_builder.py  logger.py  pipeline.py  validation.py
edge/raspiImageGenerator/core/stages/: __init__.py  base.py  compression.py  download.py  mount.py  publication.py  security.py  services.py  software.py  software_install.py  system_config.py  validation.py  w4b.py  w4b_software.py
edge/raspiImageGenerator/tests/: test_image_builder.py
edge/raspiImageGenerator/utils/: __init__.py  check_imports.py  cleanup_cache.py  debug_stages.py  dependencies.py  diagnose_download.py  error_handling.py  logging_setup.py  loop_utils.py  repair_image.py  setup_qemu.py
edge/sensorManager/: main.py  pyproject.toml  sensorManager_plan.md  sensorManager_tasks_adrs.md  sensor_config.yaml
edge/sensorManager/collectors/: collection_service.py
edge/sensorManager/config/: __init__.py  config_manager.py  sensor_config_sample.yaml  w4b-sensor-manager.service
edge/sensorManager/monitoring/: prometheus_metrics.py
edge/sensorManager/old_system/: aggregator.py  arduino.py  calibration_scale  calibration_sensors  camera_collector.sh  collector.sh  humidity.py  microphone.py  photo.py  pressure.py  sensor.py  sensors.py  sensors_config.py  sensors_info.md  servo.py  simple_i2c_sensor.py  sound_collector.sh  temperature.py  webcam.py
edge/sensorManager/scripts/: install.sh  setup_timescaledb.py  w4b-sensor-manager.service
edge/sensorManager/sensors/: __init__.py  base.py  dummy_sensors.py  factory.py  temperature.py
edge/sensorManager/storage/: db_connector.py
edge/sensorManager/tests/: conftest.py  test_config_manager.py  test_sensor_base.py  test_temperature_sensor.py
edge/sensorManager/utils/: error_handling.py  logging_setup.py  w1_utils.py
hive/: sensor_data_collector.py
hive_config_manager/:  pyproject.toml  .pre-commit-config.yaml  README.md  __init__.py  __main__.py  hive_config_manager.py  hive_config_schema.yaml  pytest.ini  setup.sh
hive_config_manager/cli/: __init__.py  interface.py  prompts.py
hive_config_manager/core/: __init__.py  exceptions.py  file_operations.py  id_generator.py  manager.py  schemas.py  security.py  validator.py
hive_config_manager/hives/: hive_0Bpfj4cJ.yaml  hive_0Bpfj4cJ_credentials.txt  hive_QESuvbLu.yaml
hive_config_manager/requirements/: requirements-dev.txt  requirements.txt
hive_config_manager/tests/: test_manager.py
hive_config_manager/utils/: file_operations.py  id_generator.py
server/: README.md
server/api/: main.go
server/deployment/: compose.yaml
server/deployment/hivectl/: README.md  hivectl.py  requirements.txt  setup.sh  ~.bash_aliases
server/deployment/scripts/: health-check.sh  init-postgres-app.sql  init-postgres-keycloak.sql  init-timescaledb.sql
server/deployment/secrets/: grafana_admin_password.txt  grafana_oauth_secret.txt  keycloak_admin_password.txt  keycloak_db_password.txt  postgres_keycloak_password.txt  timescaledb_password.txt
server/hub/: README.md  go.mod  go.sum
server/hub/api/: api.router.go
server/hub/cmd/: main.go
server/hub/config/: config.yaml
server/w4b_containers/: _temp1  complete_docker-compose.yaml  compose.yaml  docker-compose.yaml  temp2  test-keycloak.sh  test-keycloak.yaml
server/w4b_containers/dockertest/: Dockerfile  docker-compose.yml
server/w4b_containers/hivectl/: README.md  activate.sh  hivectl.py  hivectl.wrapper.sh  install_hivectl.sh  pyproject.toml  requirements.txt  setup-data.sh  setup.py  setup.sh  setup_venv_env.sh
server/w4b_containers/hivectl/hivectl/: __init__.py  __main__.py  hivectl.py
server/w4b_containers/hivectl/hivectl/config/: logging.yaml  networks.yaml
server/w4b_containers/hivectl/hivectl/core/: __init__.py  compose.py  container.py  exceptions.py  network.py  utils.py  volume.py
server/w4b_containers/hivectl/hivectl/ui/: __init__.py  console.py
server/w4b_containers/keycloak-test/: docker-compose.yaml  network-test.sh  reset.sh  test.sh
server/w4b_containers/scripts/: backup.sh  cleanup-postgres.sh  generate_env_containerpasswords.sh  health-check.sh  init-postgres-app.sql  init-postgres-keycloak.sh  init-postgres-keycloak.sql  init-postgres.sh  init-secrets.sh  init-timescaledb.sql  setup-data.sh  setup-postgres.sh
server/w4b_containers/secrets/: postgres_app_password.txt  (+2 more)
vault/: dev_machine__itsatony_com.md
vpn/: wireguard_client_management_system.sh  wireguard_manager.py
(+66 files in other folders)
